--- a/README.Rmd
+++ b/README.Rmd
@@ -131,17 +131,21 @@ Default parameter values for the shape of the gamma distributed accumulation rat
 
 
 
-### Setting the thickness, number, and hierarchical structure of the discrete sections
+### Setting the number and hierarchical structure of the discrete sections
 
 One of the more critical tuning parameters in the **Bacon** model is the parameter `thick`, which determines the thickness and number of discrete down-core sediment sections modelled. Finding a good or optimal value for a given core is often critical to getting a good age-depth model. Too few sections and the resulting age-model is very "blocky" and can miss changes in sedimentation rate; however, counter-intuitively, too many very thin sections can also often result in an age-model that "under-fits" the data - a straight line through the age-control points when a lower resolution model shows variation in accumulation rate. 
 
-The key structural difference between **Bacon** and **hamstr** models is that with **hamstr** the sediment core is modelled at multiple resolutions simultaneously with a hierarchical structure. This removes the need to trade-off smoothness and flexibility. 
+The key structural difference between **Bacon** and **hamstr** models is that with **hamstr** the sediment core is modelled at multiple resolutions simultaneously - removing the need to trade-off smoothness and flexibility. The resolutions have a hierarchical structure whereby coarse resolution "parent" sections act as priors for higher resolution "child" sections.
 
-The parameter `K` controls the number and structure of the hierarchical sections. It is specified as a vector, where each value indicates the number of new child sections for each parent section at each finer hierarchical level. E.g. `c(10, 10)` would specify 10 sections at the coarsest level, with 10 new sections at the next finer level for each coarse section, giving a total of 100 sections at the highest / finest resolution level. `c(10, 10, 10)` would specify 1000 sections at the finest level and 3 hierarchical levels of 10, 100 and 1000 sections.
+For **hamstr** version 0.8.0 and onwards, the parameter `K_fine` controls the number of discrete sections at the highest resolution level, while `K_factor` controls how much thicker the discrete sections are at each subsequent level. Sufficient levels are modelled so that the coarsest level has just one section - an overal mean accumulation rate.
 
-The structure is hierarchical in the sense that the modelled accumulation rates for the parent sections act as priors for their child sections; specifically, the mean accumulation rate for a given parent is the mean of the gamma prior for its child sections. In turn, the overall mean accumulation rate for the whole core is itself a parameter estimated by the fitting process. The hierarchical structure of increasing resolution allows the model to adapt to low-frequency changes in the accumulation rate, that is changes between "regimes" of high or low accumulation that persist for long periods. 
+The structure is hierarchical in the sense that the modelled accumulation rates for the parent sections act as priors for their child sections; specifically, the estimated accumulation rate for a coarse parent section acts as the mean of the gamma prior for its child sections. In turn, the overall mean accumulation rate for the whole core is itself a parameter estimated by the fitting process. The hierarchical structure of increasing resolution allows the model to adapt to low-frequency changes in the accumulation rate, that is changes between "regimes" of high or low accumulation that persist for long periods. 
 
-By default `K` is chosen so that the number of hierarchical levels, and the number of new child sections per level, are approximately equal, e.g. c(4, 4, 4, 4). The total number of sections at the finest level is set so that the resolution is 1 cm per section, up to a total length of 900 cm, above which the default remains 900 sections and a coarser resolution is used. This can be changed from the default via the parameter `K`.
+By default, the number of sections at the highest resolution (`K_fine`) is set so that the sections have approximately unit thickness, i.e. if the depths are in cm, the sections are 1 cm thick. This applies up to a maximum of 900 sections above which the default remains 900 sections and a coarser resolution is used. This can be changed from the default via the parameter `K_fine`.
+
+`K_factor` is set so that the total number of modelled sections is approximately 1.2 times `K_fine`, or 
+
+`K_factor`^`K_factor` $\approx$ `K_tot` $\approx$ `1.2 * K_fine`
 
 For a given shape parameter `acc_shape`, increasing the number of modelled hierarchical levels increases the total variance in the accumulation rates at the highest / finest resolution level. From **hamstr** version 0.5.0 and onwards, the total variance is controlled by modifying the shape parameter according to the number of hierarchical levels. 
 
