--- a/README.Rmd
+++ b/README.Rmd
@@ -129,7 +129,7 @@ plot(hamstr_fit_1, type = "acc_mean_prior_post")
 
 #### Other hyperparameters
 
-Default parameter values for the shape of the gamma distributed accumulation rates `acc_shape = 1.5`, the memory mean `mem_mean = 0.5` and memory strength `mem_strength = 10`, are the same as for Bacon >= 2.5.1.
+`acc_shape`, the shape of the gamma distributed prior on accumulation rates has a default value of 4 `acc_shape = 4`. The memory mean `mem_mean = 0.5` and memory strength `mem_strength = 10`, are the same as for Bacon >= 2.5.1.
 
 
 
