--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ compare_14C_PDF(MSB2K$age[i], MSB2K$error[i], cal_curve = "marine20") +
 
 ### Fitting age-models with **hamstr**
 
-Age-depth (sediment accumulation) models are fit with the function `hamstr`. A vectors of depth, observed age and age uncertainty are passed as arguments to the function.
+Age-depth (sediment accumulation) models are fit with the function `hamstr`. Vectors of depth, observed age and age uncertainty are passed as arguments to `hamstr()`.
 
 ```{r fit_hamstr}
 hamstr_fit_1 <- hamstr(depth = MSB2K_cal$depth,
@@ -98,16 +98,17 @@ hamstr_fit_1 <- hamstr(depth = MSB2K_cal$depth,
                        obs_err = MSB2K_cal$age.14C.cal.se, 
                        # the seed argument for the sampler is set here so that
                        # this example always returns the same numerical result
+                       # you should not normally do this 
                        stan_sampler_args = list(seed = 1))
 ```
 
-The default plotting method shows the fitted age models together with some diagnostic plots: a traceplot of the log-posterior to assess convergence of the overall model; a plot of accumulation rate against depth at each hierarchical level; the prior and posterior of the memory parameter. By default the age-models are summarised to show the mean, median, 25% and 95% posterior intervals. The data are shown as points with their 1-sigma uncertainties. The structure of the sections is shown along the top of the age-model plot.
+The default plotting method shows the fitted age models together with some diagnostic plots: a traceplot of the log-posterior to assess convergence of the overall model; a plot of accumulation rate against depth at each hierarchical level; and the prior and posterior of the memory parameter(s). By default the age-models are summarised to show the mean, median, 68% and 95% posterior intervals (equivalent to 1- and 2-sigma uncertainty). The data are shown as points with their 1- and 2-sigma uncertainties. The structure of the sections is shown as tick marks along the top of the age-model plot.
 
 ```{r plot_default, fig.height=7}
 plot(hamstr_fit_1)
 ```
 
-A "spaghetti" plot can be created instead of shaded regions. This shows a random sample of iterations from the posterior distribution (realisation of the age-depth model). This can be slow if lots of iterations are plotted, the default is to plot 1000 iterations. Additionally, plotting of the diagnostic plots can be switched off.
+A "spaghetti" plot can be created instead of shaded regions. This shows a random sample of iterations from the posterior distribution (realisations of the age-depth model). This can be slow if lots of iterations are plotted, the default is to plot 1000 iterations. Additionally, plotting of the diagnostic plots can be switched off.
 
 ```{r plot_realisations, dev = "png", dpi = 300}
 plot(hamstr_fit_1, summarise = FALSE, plot_diagnostics = FALSE)
@@ -139,7 +140,7 @@ One of the more critical tuning parameters in the **Bacon** model is the paramet
 
 The key structural difference between **Bacon** and **hamstr** models is that with **hamstr** the sediment core is modelled at multiple resolutions simultaneously - removing the need to trade-off smoothness and flexibility. The resolutions have a hierarchical structure whereby coarse resolution "parent" sections act as priors for higher resolution "child" sections.
 
-For **hamstr** version 0.8.0 and onwards, the parameter `K_fine` controls the number of discrete sections at the highest resolution level, while `K_factor` controls how much thicker the discrete sections are at each subsequent level. Sufficient levels are modelled so that the coarsest level has just one section - an overal mean accumulation rate.
+For **hamstr** version 0.8.0 and onwards, the parameter `K_fine` controls the number of discrete sections at the highest resolution level, while `K_factor` controls how much thicker the discrete sections are at each subsequent level. Sufficient levels are modelled so that the coarsest level has just one section - an overall mean accumulation rate.
 
 The structure is hierarchical in the sense that the modelled accumulation rates for the parent sections act as priors for their child sections; specifically, the estimated accumulation rate for a coarse parent section acts as the mean of the gamma prior for its child sections. In turn, the overall mean accumulation rate for the whole core is itself a parameter estimated by the fitting process. The hierarchical structure of increasing resolution allows the model to adapt to low-frequency changes in the accumulation rate, that is changes between "regimes" of high or low accumulation that persist for long periods. 
 
@@ -219,7 +220,6 @@ plot(hamstr_fit_1, type = "mem")
 
 
 ### Other `rstan` functions
-
 
 
 Within the hamstr_fit object is an *rstan* object on which all the standard rstan functions should operate correctly.
